--- a/templates/index.html
+++ b/templates/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -72,7 +73,25 @@
                 </div>
  
             </div>
-    
+        <div>
+
+        <!--Mars Hemispheres-->
+        <div class="row" id="mars-hemispheres">
+            <div class="page-header">
+                <h2 class="text-center">Mars Hemispheres</h2>
+            </div>
+            {% for hemisphere in mars.hemispheres %}
+            <div class="col-md-6">
+                <div class="thumbnail">
+                    <a href="{{hemisphere.img_url}}" target="_blank"><img src="{{hemisphere.img_url | default('static/images/error.png', true)}}" alt="..."></a>
+                    <div class="caption">
+                        <h3>{{hemisphere.title}}</h3>
+                    </div>
+                </div>
+            </div>
+            {% endfor %}
+
+        </div>
     </div>
 
 </body>
