--- a/templates/index.html
+++ b/templates/index.html
@@ -16,7 +16,7 @@
     <div class="container">
         <div class="jumbotron text-center">
             <h1>Mission to Mars</h1>
-            <p><a class="btn btn-primary btn-lg" href="/scrape"
+            <p><a class="btn btn-success btn-lg active" href="/scrape"
                     role="button">Scrape New Data</a></p>
         </div>
 
@@ -24,7 +24,7 @@
 
         <div class="row" id=""mars-news">
         
-            <div class="col-md-12">
+            <div class=".col-xs-6 .col-md-4">
 
                 <div class="media">
 
@@ -52,7 +52,7 @@
             
             <!--Second level-->
 
-            <div class="col-md-8">
+            <div class=".col-xs-6 .col-md-4">
 
                 <h2>Featured Mars Image</h2>
 
@@ -62,8 +62,9 @@
 
             <!--Mars Facts-->
 
-            <div class="col-md-4">
+            <div class=".col-xs-6 .col-md-4">
                 
+
                 <div class="row" id="mars-facts">
 
                     <h4>Mars Facts</h4>
@@ -71,7 +72,7 @@
                     {{mars.facts | safe}}
                     
                 </div>
- 
+
             </div>
         <div>
 
@@ -83,7 +84,7 @@
             {% for hemisphere in mars.hemispheres %}
             <div class="col-md-6">
                 <div class="thumbnail">
-                    <a href="{{hemisphere.img_url}}" target="_blank"><img src="{{hemisphere.img_url | default('static/images/error.png', true)}}" alt="..."></a>
+                    <a href="{{hemisphere.img_url}}" target="_blank"><img src="{{hemisphere.img_url | default('static/images/error.png', true)}}" alt="..." class="img-circle"></a>
                     <div class="caption">
                         <h3>{{hemisphere.title}}</h3>
                     </div>
